--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         
         <!-- Comic Footer -->
         <div class="comic-footer">
-            <div class="page-number">PAGE 1</div>
-            <div class="comic-info">© 2024 MANGA-SEC STUDIOS</div>
+            <div class="page-number">PAGE 404 ~ NOT FOUND</div>
+            <div class="comic-info">© Manga-Sec by JARS & ASH</div>
         </div>
     </div>
     
