feat: Add comprehensive meta tags and favicon for better SEO and social sharing

--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Learn cybersecurity through interactive manga-style adventures. Master ethical AI and cyber defense with MANGA-SEC's engaging comic quiz experience.">
+    <meta name="keywords" content="cybersecurity, manga, quiz, AI ethics, hacking, security education, interactive learning">
+    <meta name="author" content="MANGA-SEC Team">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="MANGA-SEC - Cybersecurity Adventures">
+    <meta property="og:description" content="Learn cybersecurity through interactive manga-style adventures">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="Manga-Sec-Logo.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="theme-color" content="#000000">
+    <link rel="icon" type="image/png" href="Manga-Sec-Logo.png">
     <title>MANGA-SEC - Black & White Cybersecurity Comic</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
