--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bangers&family=Comic+Neue:wght@400;700&family=Press+Start+2P&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="css/animations.css">
+    <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
