--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/animations.css">
     <link rel="stylesheet" href="css/components.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -87,6 +87,9 @@
         </div>
     </div>
 
+    <script src="js/sound-effects.js"></script>
+    <script src="js/notifications.js"></script>
+    <script src="js/theme-manager.js"></script>
     <script src="script.js"></script>
 </body>
 
