feat: Add comprehensive settings panel with theme switching, data export/import, and enhanced badge system

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <meta property="og:title" content="MANGA-SEC - Cybersecurity Adventures">
     <meta property="og:description" content="Learn cybersecurity through interactive manga-style adventures">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="Manga-Sec-Logo.png">
+    <meta property="og:image" content="Assets/Manga-Sec-Logo.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="theme-color" content="#000000">
-    <link rel="icon" type="image/png" href="Manga-Sec-Logo.png">
+    <link rel="icon" type="image/png" href="Assets/Manga-Sec-Logo.png">
     <title>MANGA-SEC - Black & White Cybersecurity Comic</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
