--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
     <script src="js/sound-effects.js"></script>
     <script src="js/notifications.js"></script>
     <script src="js/theme-manager.js"></script>
+    <script src="js/particle-effects.js"></script>
+    <script src="js/keyboard-shortcuts.js"></script>
     <script src="script.js"></script>
 </body>
 
