--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
     <script src="js/theme-manager.js"></script>
     <script src="js/particle-effects.js"></script>
     <script src="js/keyboard-shortcuts.js"></script>
+    <script src="js/analytics.js"></script>
+    <script src="js/accessibility.js"></script>
     <script src="script.js"></script>
 </body>
 
