feat: Complete PWA implementation with offline support and enhanced features

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="theme-color" content="#000000">
     <link rel="icon" type="image/png" href="Assets/Manga-Sec-Logo.png">
+    <link rel="manifest" href="manifest.json">
     <title>MANGA-SEC - Black & White Cybersecurity Comic</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -94,6 +95,7 @@
     <script src="js/keyboard-shortcuts.js"></script>
     <script src="js/analytics.js"></script>
     <script src="js/accessibility.js"></script>
+    <script src="js/router.js"></script>
     <script src="script.js"></script>
 </body>
 
