fix: Correct CSS and JS file paths to restore UI functionality

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/animations.css">
     <link rel="stylesheet" href="css/components.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -96,6 +96,7 @@
     <script src="js/analytics.js"></script>
     <script src="js/accessibility.js"></script>
     <script src="js/router.js"></script>
+    <script src="js/error-handler.js"></script>
     <script src="script.js"></script>
 </body>
 
