--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
     <script src="js/theme-manager.js"></script>
     <script src="js/particle-effects.js"></script>
     <script src="js/keyboard-shortcuts.js"></script>
+    <script src="js/progress-tracker.js"></script>
     <script src="js/analytics.js"></script>
     <script src="js/accessibility.js"></script>
     <script src="js/router.js"></script>
