--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
     <script src="js/particle-effects.js"></script>
     <script src="js/keyboard-shortcuts.js"></script>
     <script src="js/progress-tracker.js"></script>
+    <script src="js/loading-system.js"></script>
     <script src="js/analytics.js"></script>
     <script src="js/accessibility.js"></script>
     <script src="js/router.js"></script>
