--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
     <script src="js/keyboard-shortcuts.js"></script>
     <script src="js/progress-tracker.js"></script>
     <script src="js/loading-system.js"></script>
+    <script src="js/tooltip-system.js"></script>
     <script src="js/analytics.js"></script>
     <script src="js/accessibility.js"></script>
     <script src="js/router.js"></script>
