--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
     <script src="js/progress-tracker.js"></script>
     <script src="js/loading-system.js"></script>
     <script src="js/tooltip-system.js"></script>
+    <script src="js/background-effects.js"></script>
     <script src="js/analytics.js"></script>
     <script src="js/accessibility.js"></script>
     <script src="js/router.js"></script>
